# chat-backend-rust

./: Cargo.toml  Readme.md  sqlx-data.json
client/: Cargo.toml
client/src/: main.rs
migrations/: 1_chat_room.sql  2_message.sql  3_chat_users.sql
sql/chat_room/: fetch_all_user_is_in.sql  get.sql  insert.sql  update.sql
sql/chat_users/: get_all_in_chat_room.sql  remove_participant.sql
sql/message/: get.sql  insert.sql  update.sql
src/: chat.html  main.rs
src/dao/: chat_room_dao.rs  client.rs  main_dao.rs  message_dao.rs  mod.rs
src/domain/: chat_message.rs  chat_message_update.rs  chat_room.rs  chat_room_channel.rs  client_message_out.rs  message.rs  mod.rs  platform.rs  room.rs  state.rs  user.rs
src/net/: error.rs  handler.rs  message.rs  mod.rs  recv.rs  send.rs  utils.rs  websocket.rs
src/routes/: definition.rs  handler.rs  http.rs  mod.rs  router.rs  websocket.rs
src/routes/http/: chat_room.rs  main_router.rs  mod.rs
src/service/: message.rs  mod.rs  user.rs
src/service/http/: chat_room_svc.rs  mod.rs
src/util/: env.rs
