[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.6.1", features = ["ws"]}
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "mysql", "chrono", "decimal", "offline" ] }
actix-web = "4"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }

dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = [ "serde" ] }
rand = "0.8.5"

chat-types = { git = "https://franklinblanco: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@github.com/franklinblanco/chat-types.git" }