[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.6.1", features = ["ws"]}
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "mysql", "chrono", "decimal", "offline" ] }
actix-web = "4"
actix-cors = "0.6.2"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }

dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = [ "serde" ] }
rand = "0.8.5"
reqwest = { version = "0.11.11", features = [ "json", "blocking" ]}
openssl = { version = "0.10", features = ["vendored"] }

actix-web-utils = { git = "https://github.com/franklinblanco/actix-web-utils.git" }
err = { git = "https://github.com/franklinblanco/err.git" }

dev-communicators = { git = "https://github.com/franklinblanco/user-svc-client-rust.git" }
dev-dtos = { git = "https://github.com/franklinblanco/user-svc-dtos-rust.git" }
dev-macros = { git = "https://github.com/franklinblanco/dev-macros.git" }