[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tungstenite = "0.17.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3"
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
url = "2.0.0"
